new chnages commit....

--- a/inputs/qa.properties
+++ b/inputs/qa.properties
@@ -1,4 +1,5 @@
-ServerUrl=https://api.insuranceinbox.com/
+ServerUrl=https://api.insuranceinbox.in
 port=8000
 username=admin
 password=admin
+ElasticServerUrl=https://user:uoZDvA4RLmAp@ec9bf.insuranceinbox.in/elasticsearch/
